--- a/pkg/gmm4/DESCRIPTION
+++ b/pkg/gmm4/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: gmm4
 Version: 0.1-0
-Date: 2019-11-01
+Date: 2019-11-15
 Title: S4 Generalized Method of Moments
 Author: Pierre Chausse <pchausse@uwaterloo.ca>
 Maintainer: Pierre Chausse <pchausse@uwaterloo.ca>
 Description: This is a complete restructured version of the 'gmm' package (Chausse 2010; <doi:10.18637/jss.v034.i11>) using 'S4' only type of classes and methods. It provides tools for estimating single equations and system of equations using the Generalized Method of Moments (Hansen 1982; <doi:10.2307/1912775>). It is in a very early stage and suggestions are welcome. See the vignette for more details.
 Depends: R (>= 3.0.0), sandwich
-Imports: stats, methods
+Imports: stats, methods, parallel
 Suggests: lmtest, knitr, texreg
 Collate: 'allClasses.R' 'validity.R' 'gmmData.R' 'gmmModels-methods.R'
         'gmmfit-methods.R' 'tsls-methods.R' 'specTest-methods.R'
@@ -14,7 +14,7 @@ Collate: 'allClasses.R' 'validity.R' 'gmmData.R' 'gmmModels-methods.R'
         'rGmmModel-methods.R' 'hypothesisTest-methods.R'
         'sysGmmModel.R' 'sysGmmModels-methods.R' 'rsysGmmModels-methods.R'
 	'sgmmfit-methods.R' 'gmm4.R' 'gel.R' 'gelModels-methods.R'
-	'rGelModel-methods.R' 'gelfit-methods.R'
+	'rGelModel-methods.R' 'gelfit-methods.R' 'gel4.R'
 License: GPL (>= 2)
 NeedsCompilation: yes
 VignetteBuilder: knitr
