--- a/pkg/gmm4/NAMESPACE
+++ b/pkg/gmm4/NAMESPACE
@@ -7,6 +7,8 @@ importFrom("parallel", mclapply)
 
 importFrom("graphics", plot, polygon, grid, points)
 
+importFrom("grDevices", rgb, col2rgb)
+
 importFrom("utils", capture.output)
 
 importFrom("stats", "ar", "as.formula", "model.matrix","vcov",
