some change but mostly added stuff to the vignette
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@158 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/causalGel/NAMESPACE
+++ b/pkg/causalGel/NAMESPACE
@@ -12,9 +12,9 @@ exportClasses()
 
 exportClasses("causalData", "causalGel", "causalGelfit")
 
-exportMethods("causalMomFct")
+exportMethods("causalMomFct", "checkConv")
 
-export("causalModel")
+export("causalModel", "causalGEL")
 
 
 
