fixed errors caused by new matrix class in the new R version
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@159 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/gmm/DESCRIPTION
+++ b/pkg/gmm/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: gmm
-Version: 1.6-3
-Date: 2019-05-15
+Version: 1.6-4
+Date: 2019-12-04
 Title: Generalized Method of Moments and Generalized Empirical
         Likelihood
 Author: Pierre Chausse <pchausse@uwaterloo.ca>
@@ -14,6 +14,7 @@ Description: It is a complete suite to estimate models based on moment
         Kitamura 1997; <doi:10.1214/aos/1069362388>, Newey and Smith 2004; <doi:10.1111/j.1468-0262.2004.00482.x>,
 	and Anatolyev 2005 <doi:10.1111/j.1468-0262.2005.00601.x>).
 Depends: R (>= 2.10.0), sandwich
+NeedsCompilation: yes
 Suggests: mvtnorm, car, stabledist, MASS, timeDate, timeSeries
 Imports: stats, methods, grDevices, graphics
 License: GPL (>= 2) 
