many bugs fixed
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@162 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/gmm4/NAMESPACE
+++ b/pkg/gmm4/NAMESPACE
@@ -5,7 +5,7 @@ importFrom("methods", is, new, show, "slot<-", "slotNames", "validObject",
 
 importFrom("parallel", mclapply)
 
-importFrom("graphics", plot, polygon, grid, points)
+importFrom("graphics", plot, polygon, grid, points, text)
 
 importFrom("grDevices", rgb, col2rgb)
 
