converted causalGel to the new momentfit and fixed a bug in momentfit
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@165 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/causalGel/DESCRIPTION
+++ b/pkg/causalGel/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: causalGel
 Version: 0.0-1
-Date: 2019-11-15
+Date: 2020-01-20
 Title: Causal Inference using Generalized Empirical
         Likelihood Methods
 Author: Pierre Chausse <pchausse@uwaterloo.ca>
 Maintainer: Pierre Chausse <pchausse@uwaterloo.ca>
 Description: Methods for causal inference in which covariates are balanced using generalized empirical likelihod methods.
-Depends: R (>= 3.0.0), gmm4 (>= 0.2.0)
+Depends: R (>= 3.0.0), momentfit (>= 0.1.0)
 Imports: stats, methods
 Suggests: lmtest, knitr, texreg
 Collate: 'allClasses.R' 'causalMethods.R' 'rcausalMethods.R' 'causalGel.R'
