--- a/pkg/momentfit/DESCRIPTION
+++ b/pkg/momentfit/DESCRIPTION
@@ -4,7 +4,7 @@ Date: 2020-01-20
 Title: Methods of Moments
 Author: Pierre Chausse <pchausse@uwaterloo.ca>
 Maintainer: Pierre Chausse <pchausse@uwaterloo.ca>
-Description: Various methods for estimating models based on moment conditions. The methods include the Generalized method of moments (Hansen 1982; <doi:10.2307/1912775>) and the  Generalized Empirical Likelihood (Smith 1997; <doi:10.1111/j.0013-0133.1997.174.x>, Kitamura 1997; <doi:10.1214/aos/1069362388>, Newey and Smith 2004; <doi:10.1111/j.1468-0262.2004.00482.x>, and Anatolyev 2005 <doi:10.1111/j.1468-0262.2005.00601.x>). It provides tools for estimating single equations and system of equations. It is in a very early stage and suggestions are welcome. See the vignette for more details.
+Description: Several classes for moment-based models are defined. The classes are defined for moment conditions derived from a single equation or a system of equations. The conditions can also be expressed as functions or formulas. Several methods are also offered to facilitate the development of different estimation techniques. The methods that are currently provided are the Generalized method of moments (Hansen 1982; <doi:10.2307/1912775>), for single equations and systems of equation, and  the Generalized Empirical Likelihood (Smith 1997; <doi:10.1111/j.0013-0133.1997.174.x>, Kitamura 1997; <doi:10.1214/aos/1069362388>, Newey and Smith 2004; <doi:10.1111/j.1468-0262.2004.00482.x>, and Anatolyev 2005 <doi:10.1111/j.1468-0262.2005.00601.x>). 
 Depends: R (>= 3.0.0), sandwich
 Imports: stats, methods, parallel
 Suggests: lmtest, knitr, texreg
