start to add nonlinear systems of equations
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@170 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/momentfit/NAMESPACE
+++ b/pkg/momentfit/NAMESPACE
@@ -42,7 +42,7 @@ export(momentModel, modelResponse, evalMoment, Dresiduals, modelDims, evalDMomen
        printRestrict, restModel, getRestrict, gmm4, sysMomentModel, ThreeSLS,
        rhoET, rhoEL, rhoEEL, rhoHD, Wu_lam, EEL_lam, REEL_lam, getLambda, 
        solveGel, rhoETEL, rhoETHD, ETXX_lam, gelFit, evalGel, getImpProb,
-       evalGelObj, momFct, gel4)
+       evalGelObj, momFct, gel4, setCoef)
  
 ###  S3 methods ###
 
