added zero-restrictions on the lambdas to both packages
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@176 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/momentfit/DESCRIPTION
+++ b/pkg/momentfit/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: momentfit
-Version: 0.1-2
-Date: 2020-11-02
+Version: 0.2
+Date: 2020-11-03
 Title: Methods of Moments
 Author: Pierre Chausse <pchausse@uwaterloo.ca>
 Maintainer: Pierre Chausse <pchausse@uwaterloo.ca>
