Added the option orthoBases to the causalGEL function
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@179 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/causalGel/NAMESPACE
+++ b/pkg/causalGel/NAMESPACE
@@ -1,6 +1,6 @@
 import("momentfit")
 
-importFrom("stats", "lm", "model.response", "terms", "model.frame", "reformulate")
+importFrom("stats", "lm", "model.response", "terms", "model.frame", "reformulate", "as.formula")
 importFrom("utils", "head", "tail")
 
 importFrom("methods", is, new, show, "slot<-", "slotNames", "validObject",
