--- a/pkg/causalGel/DESCRIPTION
+++ b/pkg/causalGel/DESCRIPTION
@@ -1,18 +1,18 @@
 Package: causalGel
-Version: 0.1-1
-Date: 2020-11-09
+Version: 0.2	
+Date: 2020-11-23
 Title: Causal Inference using Generalized Empirical
         Likelihood Methods
 Author: Pierre Chausse <pchausse@uwaterloo.ca>
 Maintainer: Pierre Chausse <pchausse@uwaterloo.ca>
 Description: Methods for causal inference in which covariates are balanced using generalized empirical likelihod methods.
 Depends: R (>= 3.0.0), momentfit (>= 0.2)
-Imports: stats, methods
+Imports: stats, methods, quadprog
 Suggests: lmtest, knitr, texreg
 Collate: 'allClasses.R' 'causalMethods.R' 'rcausalMethods.R' 'causalGel.R'
-	 'causalfitMethods.R'
+	 'causalfitMethods.R' 'otherCausal.R'
 License: GPL (>= 2) 
-NeedsCompilation: no
+NeedsCompilation: yes
 VignetteBuilder: knitr
 
 
