--- a/pkg/gmm/DESCRIPTION
+++ b/pkg/gmm/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: gmm
-Version: 1.6-6
-Date: 2021-02-07
+Version: 1.7
+Date: 2021-10-14
 Title: Generalized Method of Moments and Generalized Empirical
         Likelihood
 Author: Pierre Chausse <pchausse@uwaterloo.ca>
