started to add systems of functions
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@188 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/momentfit/NAMESPACE
+++ b/pkg/momentfit/NAMESPACE
@@ -27,6 +27,7 @@ exportClasses("nonlinearModel", "linearModel", "functionModel", "momentModel",
               "rformulaModel", "momentWeights", "sysMomentWeights",
               "rnonlinearModel", "rfunctionModel", "gmmfit",
               "slinearModel", "snonlinearModel", "sysModel",
+              "sfunctionModel",
               "rslinearModel", "rsnonlinearModel", "summarySysGmm",
               "rsysModel", "formulaModel","rfunctionModel", "sSpec",
               "summaryGmm", "specTest", "confint", "mconfint",
