Added the possility of having more than one covariate
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@190 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/causalOTLSE/DESCRIPTION
+++ b/pkg/causalOTLSE/DESCRIPTION
@@ -8,7 +8,7 @@ Authors@R: c(person("Pierre Chausse", "Developer", role = c("aut", "cre"),
 	             email = "giurcanu@uchicago.edu"))
 Description: This package includes tools to measure causal effects using least squares regressions. The number of piecewise polynomials is selected by some information criteria.
 Depends: R (>= 4.0.0)
-Imports: stats, splines, car, sandwich, cvTools
+Imports: stats, splines, car, sandwich, cvTools, graphics
 License: GPL (>= 2)
 NeedsCompilation: no
 Packaged: 2022-06-07 19:15:24 UTC; pierrechausse
