--- a/pkg/causalOTLSE/NAMESPACE
+++ b/pkg/causalOTLSE/NAMESPACE
@@ -1,13 +1,15 @@
-importFrom(stats, quantile, lm, predict, coef, vcov, printCoefmat, cov, pnorm)
+importFrom(stats, quantile, lm, predict, coef, vcov, printCoefmat, cov, pnorm,
+           terms, model.matrix, as.formula, model.frame)
 importFrom(car, linearHypothesis)
+importFrom(graphics, grid, legend, matplot)
 importFrom(sandwich, vcovHC)
 importFrom(cvTools, cvFolds)
 importFrom(splines, bs)
 
 export(otlse, print.otlse, summary.otlse, print.summary.otlse,
-       splineMatrix, selASY, selIC, selCV)
+       ppSplines, selASY, selIC)
  
 S3method(summary, otlse)
 S3method(print, otlse)
 S3method(print, summary.otlse)
-
+S3method(plot, otlse)
