--- a/pkg/causalOTLSE/DESCRIPTION
+++ b/pkg/causalOTLSE/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: causalOTLSE
 Version: 0.1-0
-Date: 2022-06-07
+Date: 2022-06-29
 Title: Optimal Thresholding Least Squares Inference for Causal Effects
 Authors@R: c(person("Pierre Chausse", "Developer", role = c("aut", "cre"),
                      email = "pchausse@uwaterloo.ca"),
@@ -8,10 +8,6 @@ Authors@R: c(person("Pierre Chausse", "Developer", role = c("aut", "cre"),
 	             email = "giurcanu@uchicago.edu"))
 Description: This package includes tools to measure causal effects using least squares regressions. The number of piecewise polynomials is selected by some information criteria.
 Depends: R (>= 4.0.0)
-Imports: stats, splines, car, sandwich, cvTools, graphics
+Imports: stats, splines, sandwich, cvTools, graphics
 License: GPL (>= 2)
 NeedsCompilation: no
-Packaged: 2022-06-07 19:15:24 UTC; pierrechausse
-Author: Pierre Chausse Developer [aut, cre],
-  Mihai Giurcanu Developer [aut]
-Maintainer: Pierre Chausse Developer <pchausse@uwaterloo.ca>
