add flexibility for the number of knots and added texreg functionality
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@196 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/causalOTLSE/NAMESPACE
+++ b/pkg/causalOTLSE/NAMESPACE
@@ -4,9 +4,11 @@ importFrom(graphics, grid, legend, matplot)
 importFrom(sandwich, vcovHC)
 importFrom(cvTools, cvFolds)
 importFrom(splines, bs)
+importFrom(methods, setMethod)
+importFrom(texreg, extract, createTexreg)
 
 export(otlse, print.otlse, summary.otlse, print.summary.otlse,
-       ppSplines, selASY, selIC)
+       ppSplines, selASY, selIC, extract)
  
 S3method(summary, otlse)
 S3method(print, otlse)
