--- a/pkg/causalOTLSE/DESCRIPTION
+++ b/pkg/causalOTLSE/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: causalOTLSE
 Version: 0.1-0
-Date: 2022-06-29
+Date: 2022-07-08
 Title: Optimal Thresholding Least Squares Inference for Causal Effects
 Authors@R: c(person("Pierre Chausse", "Developer", role = c("aut", "cre"),
                      email = "pchausse@uwaterloo.ca"),
@@ -8,6 +8,6 @@ Authors@R: c(person("Pierre Chausse", "Developer", role = c("aut", "cre"),
 	             email = "giurcanu@uchicago.edu"))
 Description: This package includes tools to measure causal effects using least squares regressions. The number of piecewise polynomials is selected by some information criteria.
 Depends: R (>= 4.0.0)
-Imports: stats, splines, sandwich, cvTools, graphics
+Imports: stats, splines, sandwich, cvTools, graphics, methods, texreg
 License: GPL (>= 2)
 NeedsCompilation: no
