--- a/pkg/causalGel/DESCRIPTION
+++ b/pkg/causalGel/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: causalGel
 Version: 0.2	
-Date: 2020-11-23
+Date: 2022-07-12
 Title: Causal Inference using Generalized Empirical
         Likelihood Methods
 Author: Pierre Chausse <pchausse@uwaterloo.ca>
 Maintainer: Pierre Chausse <pchausse@uwaterloo.ca>
 Description: Methods for causal inference in which covariates are balanced using generalized empirical likelihod methods.
 Depends: R (>= 3.0.0), momentfit (>= 0.2)
-Imports: stats, methods, quadprog
-Suggests: lmtest, knitr, texreg
+Imports: stats, methods, quadprog, texreg
+Suggests: lmtest, knitr
 Collate: 'allClasses.R' 'causalMethods.R' 'rcausalMethods.R' 'causalGel.R'
 	 'causalfitMethods.R' 'otherCausal.R'
 License: GPL (>= 2) 
