--- a/pkg/momentfit/NAMESPACE
+++ b/pkg/momentfit/NAMESPACE
@@ -44,7 +44,7 @@ export(momentModel, modelResponse, evalMoment, Dresiduals, modelDims, evalDMomen
        rhoET, rhoEL, rhoEEL, rhoHD, Wu_lam, EEL_lam, REEL_lam, getLambda, 
        solveGel, rhoETEL, rhoETHD, ETXX_lam, gelFit, evalGel, getImpProb,
        evalGelObj, momFct, gel4, setCoef, lse, getK, kclassfit, CDtest,
-       SYTables, SWtest, MOPtest)
+       SYTables, SWtest, MOPtest, LewMertest)
  
 ###  S3 methods ###
 
