working on weak instrument test again. Added the df adjustment to HAC
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@227 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/momentfit/NAMESPACE
+++ b/pkg/momentfit/NAMESPACE
@@ -19,7 +19,7 @@ importFrom("stats", "ar", "as.formula", "model.matrix","vcov",
            "constrOptim", "kernel", "confint", "qnorm", "uniroot", "getCall", "qchisq", "optimize")
 importFrom("sandwich", "vcovHAC", "estfun","kernHAC","vcovCL", "meatCL",
            "bread","bwAndrews","bwNeweyWest","weightsAndrews",
-           "weightsLumley", "vcovHC")
+           "weightsLumley", "vcovHC", "meatHAC")
 
 ### S4 Methods and Classes
 exportClasses("nonlinearModel", "linearModel", "functionModel", "momentModel",
