working on the Lewis and Mertens test for weak instruments -- from their matlab code
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@228 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/momentfit/NAMESPACE
+++ b/pkg/momentfit/NAMESPACE
@@ -16,7 +16,8 @@ importFrom("stats", "ar", "as.formula", "model.matrix","vcov",
            "D", "numericDeriv", "sd", "optim", "lm", "pf", "coef", "update",
            "fitted", "lm.fit", "pchisq", "pnorm", "printCoefmat", "anova",
            "model.frame", "reformulate", "formula", "nlminb", "kernapply",
-           "constrOptim", "kernel", "confint", "qnorm", "uniroot", "getCall", "qchisq", "optimize")
+           "constrOptim", "kernel", "confint", "qnorm", "uniroot", "getCall", "qchisq", "optimize",
+           "integrate", "rnorm")
 importFrom("sandwich", "vcovHAC", "estfun","kernHAC","vcovCL", "meatCL",
            "bread","bwAndrews","bwNeweyWest","weightsAndrews",
            "weightsLumley", "vcovHC", "meatHAC")
