add the options for other solvers and return more convergence message
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@239 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/momentfit/NAMESPACE
+++ b/pkg/momentfit/NAMESPACE
@@ -33,7 +33,8 @@ exportClasses("nonlinearModel", "linearModel", "functionModel", "momentModel",
               "rsysModel", "formulaModel","rfunctionModel", "sSpec",
               "summaryGmm", "specTest", "confint", "mconfint",
               "hypothesisTest", "stsls", "sgmmfit", "gelfit", "summaryGel",
-              "tsls", "lsefit", "kclassfit", "summaryKclass")
+              "tsls", "lsefit", "kclassfit", "summaryKclass",
+              "minAlgo", "minAlgoStd", "minAlgoNlm")
 
 exportMethods(print, show, kernapply, coef,  model.matrix, bread, summary,
               residuals, "[", vcovHAC, subset, update, vcov, plot, confint, merge)
@@ -45,7 +46,7 @@ export(momentModel, modelResponse, evalMoment, Dresiduals, modelDims, evalDMomen
        rhoET, rhoEL, rhoEEL, rhoHD, Wu_lam, EEL_lam, REEL_lam, getLambda, 
        solveGel, rhoETEL, rhoETHD, ETXX_lam, gelFit, evalGel, getImpProb,
        evalGelObj, momFct, gel4, setCoef, lse, getK, kclassfit, CDtest,
-       SYTables, SWtest, MOPtest, LewMertest)
+       SYTables, SWtest, MOPtest, LewMertest, minFit, algoObj)
  
 ###  S3 methods ###
 
