starting to add the option of using a generalized inverse to invert the weighting matrix
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@240 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/momentfit/DESCRIPTION
+++ b/pkg/momentfit/DESCRIPTION
@@ -14,7 +14,7 @@ Collate: 'allClasses.R' 'validity.R' 'momentData.R' 'momentModel-methods.R'
 	 'hypothesisTest-methods.R' 'sysMomentModel.R'
 	 'sysMomentModel-methods.R' 'rsysMomentModel-methods.R'
 	 'sgmmfit-methods.R' 'gmm4.R' 'gel.R' 'gelfit-methods.R' 'gel4.R' 'weak.R'
-	 'minAlgo.R'
+	 'minAlgo.R' 'utils.R'
 License: GPL (>= 2)
 NeedsCompilation: yes
 VignetteBuilder: knitr
