--- a/pkg/momentfit/DESCRIPTION
+++ b/pkg/momentfit/DESCRIPTION
@@ -1,8 +1,10 @@
 Package: momentfit
 Version: 1.0
-Date: 2024-05-27
+Date: 2025-06-17
 Title: Methods of Moments
-Author: Pierre Chausse <pchausse@uwaterloo.ca>
+Authors@R: person(given="Pierre", family="Chausse", role=c("aut","cre"),
+	     	    email="pchausse@uwaterloo.ca")
+Author: Pierre Chausse [aut, cre]
 Maintainer: Pierre Chausse <pchausse@uwaterloo.ca>
 Description: Several classes for moment-based models are defined. The classes are defined for moment conditions derived from a single equation or a system of equations. The conditions can also be expressed as functions or formulas. Several methods are also offered to facilitate the development of different estimation techniques. The methods that are currently provided are the Generalized method of moments (Hansen 1982; <doi:10.2307/1912775>), for single equations and systems of equation, and  the Generalized Empirical Likelihood (Smith 1997; <doi:10.1111/j.0013-0133.1997.174.x>, Kitamura 1997; <doi:10.1214/aos/1069362388>, Newey and Smith 2004; <doi:10.1111/j.1468-0262.2004.00482.x>, and Anatolyev 2005 <doi:10.1111/j.1468-0262.2005.00601.x>).Some work is being done to add tools to deal with weak and/or many instruments. This include K-Class estimators (LIML and Fuller), Anderson and Rubin statistics test, etc. 
 Depends: R (>= 3.5), sandwich
